app/src/main/java/com/example/rentit/core/error/ConflictException.kt
package com.example.rentit.core.error

class ConflictException(message: String? = null): Exception(message)